increase z-index of footer to prevent reset button from overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,7 @@ code {
   color: white;
   text-align: center;
   height: 40px;
+  z-index: 999;
 }
 
 .footer p {
